force-app/main/default/objects/Account_Location__c/Account_Location__c.object-meta.xml
<CustomObject>
    <label>Account Location</label>
    <nameField>
        <label>Account Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>