force-app/main/default/objects/Account_Location__c/fields/Conversion_Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Source_ID__c</fullName>
    <label>Conversion Source ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>