force-app/main/default/objects/Account_Location__c/fields/Location_Conversion_Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Location_Conversion_Source_ID__c</fullName>
    <formula>Location__r.Conversion_Source_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Conversion Source ID</label>
    <type>Text</type>
</CustomField>